--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build && mv build docs",
+        "build": "react-scripts-ts build && xcopy build docs /i /s /y",
         "test": "react-scripts-ts test --env=jsdom",
         "eject": "react-scripts-ts eject",
         "copy": "xcopy \"C:\\Users\\krose\\Documents\\GitLab\\revert-filters\\build\" \"C:\\Users\\krose\\Documents\\GitHub\\Revert-Filters\" /i /s /y"
