--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build",
+        "build": "react-scripts-ts build && rd /s /q docs && mv build docs",
         "test": "react-scripts-ts test --env=jsdom",
         "eject": "react-scripts-ts eject"
     },
